# rag-chat-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
soly_core/: main.py
soly_core/agent/: agent_setup.py  prompt.py  request_dto.py  streaming_agent_setup.py  streaming_prompt.py
soly_core/agent/tools/: faq_tool.py  hwp_retriever_tool.py  user_info_tool.py
soly_core/chunking/: text_splitter.py
soly_core/embedding/: build_faq_vectorstore_faiss.py  build_hwp_vectorstore.py
soly_core/loader/: hwp_loader.py
soly_core/model/: bedrock_llm.py
soly_core/pipelines/: hwp_to_chunks.py  hwp_to_documents.py
soly_core/preprocessors/: hwp_parser.py
soly_core/vectordb/faq/: index.faiss  index.pkl
soly_core/vectordb/hwp/: index.faiss  index.pkl
